Wed Jul 20 15:14:28 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * Added XSC as a module to the WashU CVS.

Tue Jul 19 17:27:25 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * NEWS:

          Added a NEWS file that illustrates the latest and greatest
          feature additions to XSC.

Tue Jul 19 17:10:43 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * CXX/Elements.hpp:
        * CXX/Generator.cpp:
        * CXX/Header.cpp:
        * CXX/Inline.cpp:
        * CXX/Source.cpp:

          This commit completes the generation of CDR Reader Writer
          operations automatically from XML schemas. The issues that were
          resolved include ensuring (1) ordering of operations, i.e.,
          reads and write and done in the same order, (2) optional
          attributes are read after the element is constructed, and (3)
          adding sequences after element constructions. Further care had
          to be taken to maintain list of required elements in a complex
          type, write them first and then read them back, construct the
          element and then add the non essential attributes. This commit
          should do all of this. We need to start working on regression
          testing of the various XML schemas to ensure correctness.

Wed Jul  6 12:14:37 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * CXX/Elements.hpp:
        * CXX/Generator.cpp:
        * CXX/Header.cpp:
        * CXX/Inline.cpp:
        * CXX/Source.cpp:

          Resolved problems with context propagation in the different
          files. The problem was that the copy constructor in the Context
          class did not copy over the cdr_reader and cdr_writer generation
          flags set in the classes. Additionally, this commit also fixes
          problems with cdr-writer operation generation. This should now
          work for all schema definitions.
