@@ -1,3 +1,12 @@
+Wed Jul 20 17:15:16 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>
+
+        * CXX/Source.cpp:
+
+          I had missed handling elements that can be optional. These occur
+          in the schema as minOccurs=0 maxOccurs=1..n. These should be
+          written at the end of writing a complex element and then read
+          last and added to the element. This commit addresses this bug.
+
 Wed Jul 20 15:14:28 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>
 
         * Added XSC as a module to the WashU CVS.
